# workforce_analytics

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.simple  Dockerfile.slim  Procfile  README.md  docker-compose.yml
frontend/: CLAUDE.md  Cargo.toml  README.md  schema.graphql  schema.json
frontend/i18n/en/: epifront.ftl
frontend/i18n/fr/: epifront.ftl
frontend/queries/: log_in.graphql
frontend/queries/capabilities/: capability_by_name_and_level.graphql
frontend/queries/org_tiers/: org_tier_by_id.graphql  org_tiers_by_org_id.graphql
frontend/queries/organizations/: all_organizations.graphql  organization_by_id.graphql
frontend/queries/people/: person_by_id.graphql  person_by_name.graphql
frontend/queries/publications/: publication_by_id.graphql
frontend/queries/roles/: role_by_id.graphql
frontend/queries/task/: task_by_id.graphql
frontend/queries/teams/: all_teams.graphql  team_by_id.graphql
frontend/queries/work/: work_by_id.graphql
frontend/src/: errors.rs  lib.rs  main.rs
frontend/src/graphql/: affiliation.rs  capability.rs  log_in_mutation.rs  mod.rs  org_tier.rs  organization.rs  person.rs  publication.rs  role.rs  task.rs  team.rs  work.rs
frontend/src/handlers/: authentication_hander.rs  base.rs  capability.rs  email.rs  errors.rs  forms.rs  mod.rs  org_tier.rs  organization.rs  person.rs  publication.rs  role.rs  routes.rs  task.rs  team.rs  users.rs  utility.rs  work.rs
frontend/src/models/: mod.rs
frontend/templates/: base.html  index.html
frontend/templates/authentication/: change_password.html  log_in.html  (+5 more)
(+46 files in other folders)
