[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web
actix-web = "3.3.3"
#actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "1.1.1"
actix-multipart = "0.3.0"
actix-service = "2.0.2"
actix-identity = "0.3.1"
actix-session = "0.4.1"
actix-web-static-files = "3.0.5"
reqwest = "0.11.16"

# database and data
lazy_static = "1.4"
shrinkwraprs = "0.3"
graphql_client = "0.13.0"

dotenv = "0.15.0"
chrono = {version = "*", features = ["serde"] }
serde = "1.0.136"
serde_derive = "1.0.136"
derive_more = "0.99.8"
serde_json = "1.0.78"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rand = "0.8.4"
regex = "1.5.4"
env_logger = "0.9.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25.0"

# templating
tera = "1.15.0"
tera-text-filters = "1.0"
Inflector = "0.11.4"

# localization
fluent-templates = { version = "*", features = ["tera"] }
# deepl-api = { git = "https://github.com/ToferC/deepl-api-rs.git", branch="master" }

# email
sendgrid = "0.17.4"

[build-dependencies]
actix-web-static-files = "3.0.5"